--- a/index.html
+++ b/index.html
@@ -1,37 +1,108 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bootstrap</title>
+    <title>CN@Warden</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <META http-equiv=Content-Type content="text/html; charset=utf-8">
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-
+    <link href="http://cdn.bootcss.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/owner.css" rel="stylesheet" media="screen">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-    <script src="js/jquery-2.1.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
   </head>
   <body>
-    <div class="container">
-        <h1>Hello, world!</h1>
-        <div class="row">
-            <div class="col-xs-4">
-                <h2 class="page-header">Demo Test 1</h2>
-                <p style="border:1px solid ">Bootstrap quick demo</p>
-            </div>
-            <div class="col-xs-4">
-                <h2 class="page-header">Demo Test 2</h2>
-                <p style="border:1px solid ">Bootstrap quick demo</p>
-            </div>
-            <div class="col-xs-4">
-                <h2 class="page-header">Demo Test 3</h2>
-                <p style="border:1px solid ">Bootstrap quick demo</p>
-            </div>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">CN@WARDEN</a>
         </div>
+        
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">首页</a></li>
+            <li><a href="#">周边生活</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">工作内容<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">C++</a></li>
+                <li><a href="#">Python</a></li>
+                <li><a href="#">GitHub</a></li>
+                <li><a href="#">CFA</a></li>
+              </ul>
+            </li>
+          </ul>
+          <form class="navbar-form navbar-right" role="search">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="感兴趣的...">
+            </div>
+            <button type="submit" class="btn btn-success">查询</button>
+          </form>
+          </div><!-- /.navbar-collapse -->
+        </div>
+      </div>
+      <!-- Main Frame -->
+
+
+
+    
+
+  
+
+  <div class="container">
+    <div class="row main">
+        <!-- Carousel ================================================== -->
+        <div class="span8">
+      <div id="myCarousel" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="item active">
+            <img alt="first slide" src="img/1.png"></img>
+            <div class="container">
+              <div class="carousel-caption">
+                <h1>测试</h1>
+                <h2>测试测试测试测试测试测试测试测试测</h2>
+                <p>
+                  <a class="btn btn-lg btn-primary btn-shadow bs3-link" href="http://v3.bootcss.com/" target="_blank" role="button">测试测试测试测试测试测试测试测试测</a>
+                </p>
+
+                  <a class="bs2-link" href="http://v2.bootcss.com/" target="_blank" role="button">测试测试测试测试测试测试测试测试测</a>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+
+      <div class="span4">
+        <div class="sidebar-right">
+        </div>
+      </div>
     </div>
-  </body>
-</html>
+    </div>
+
+    <!-- FOOTER -->
+    <footer class="footer ">
+      <p>Powered By <a href="#">FOOTER</a>
+    </footer>
+
+    <script src="http://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
+    <script src="http://cdn.bootcss.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
+      <!--
+      <script src="js/jquery-2.1.1.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+      -->
+    </body>
+  </html>
