--- a/index.html
+++ b/index.html
@@ -93,20 +93,20 @@ topic: main
 			</div>
 		</div>
 		<div class="content">
-			{% for category in site.categories %}
-				<div class="content-header">
-					{{ category | first }}
-				</div>
-				<div class="content-list">
-					{% for posts in category %}
-						{% for post in posts %}
-							{% if post.url %}
-							<li><a href="{{ post.url }}">{{ post.title }} - TT</a></li>
-							{% endif %}
-						{% endfor %}
-					{% endfor %}
-				</div>
+<!-- 			{% for category in site.categories %}
+	<div class="content-header">
+		{{ category | first }}
+	</div>
+	<div class="content-list">
+		{% for posts in category %}
+			{% for post in posts %}
+				{% if post.url %}
+				<li><a href="{{ post.url }}">{{ post.title }} - TT</a></li>
+				{% endif %}
 			{% endfor %}
+		{% endfor %}
+	</div>
+{% endfor %} -->
 		</div>
 	</body>
 </html>
