--- a/index.html
+++ b/index.html
@@ -1,112 +1,7 @@
----
-topic: main
----
-
-<!DOCTYPE html>
 <html>
-<head>
-	<title>Main Page</title>
-	<style>
-		body {
-			background-color: #fff;
-			color: #333;
-			font-size: 15px;
-			font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-			height: 100%;
-		}
-
-		body, ul, li, div {
-			margin: 0;
-		}
-
-		#header {
-			background-color:#fafafa;
-			background: -webkit-linear-gradient(#fafafa, #eaeaea);
-			border-bottom: 1px solid #cacaca;
-			box-shadow:0 1px 0 rgba(255,255,255,.4),0 0 10px rgba(0,0,0,.1);
-			width: 100%;
-			display: block;
-			overflow: hidden;
-			padding: 10px 0 10px 0;
-
-			/*float one not affect the height, overflow hidden will fix it*/
-		}
-
-		#header div.clearfix {
-			width: 940px;
-			margin: 0 auto;
-		}
-
-		.clearfix {
-			display: block;
-		}
-
-		.logo {
-			float: left;
-			margin: 10px 0;
-		}
-
-		ul.top-nav {
-			float: right;
-		}
-
-		ul.top-nav > li {
-			float: left;
-			margin-left: 15px;
-			list-style: none;
-		}
-
-		a:visited {
-			text-decoration: none;
-		}
-
-		a {
-			text-decoration: none;
-		}
-
-		div.content {
-			padding-top: 30px;
-			width: 940px;
-			margin: 0 auto;
-		}
-
-		.content-header {
-			border-bottom: 1px solid #ddd;
-
-			color: #999;
-			font-size: 12px;
-		}
-
-		.content-list li {
-			line-height: 20px;
-		}
-
-	</style>
-</head>
 	<body>
-		<div id="header">
-			<div class="clearfix">
-				<ul class="top-nav">
-					<li><a href="/#">Version</a></li>
-					<li><a href="/#">Support</a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="content">
-<!-- 			{% for category in site.categories %}
-	<div class="content-header">
-		{{ category | first }}
-	</div>
-	<div class="content-list">
-		{% for posts in category %}
-			{% for post in posts %}
-				{% if post.url %}
-				<li><a href="{{ post.url }}">{{ post.title }} - TT</a></li>
-				{% endif %}
-			{% endfor %}
-		{% endfor %}
-	</div>
-{% endfor %} -->
-		</div>
+		<ul>
+			<li><a href="https://stackoverflow.com/questions/47022070/display-all-dataframe-columns-in-a-jupyter-python-notebook">Display all dataframe columns in a Jupyter Python Notebook</a></li>
+		</ul>
 	</body>
 </html>
